--- a/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
+++ b/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
@@ -145,6 +145,9 @@
   <data name="Trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="(180)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\(180).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pop-shop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pop-shop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -208,7 +211,7 @@
   <data name="preferences-system-windows-effect-flipswitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\preferences-system-windows-effect-flipswitch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="(180)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\(180).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="help-info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\help-info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
