--- a/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
+++ b/Shopping_Buy_All/Shopping_Buy_All/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="1315084_less_minus_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1315084_less_minus_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mega" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mega.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="211802_plus_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\211802_plus_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -169,11 +172,14 @@
   <data name="audacious" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\audacious.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="terminator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\terminator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="typora" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\typora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="terminator" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\terminator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="gparted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gparted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="vnote" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vnote.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -183,9 +189,6 @@
   </data>
   <data name="menu-editor1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\menu-editor1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="gparted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gparted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="typora1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\typora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,7 +211,7 @@
   <data name="preferences-system-windows-effect-flipswitch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\preferences-system-windows-effect-flipswitch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="mega" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\mega.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="org.gnome.Books" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\org.gnome.Books.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
